@@ -1,6 +1,7 @@
 QXmpp 0.6.4 (UNRELEASED)
 ------------------------
 
+  - Make it possible to set the client's extended information form (XEP-0128).
   - Fix XEP-0115 verification strings (remove duplicate features, sort form values)
   - Fix issues:
     * Issue 144: QXmppBookmarkConference autojoin parsing
